# pawpal

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  brain.md  macos-qa.md  product-spec.md  release.md  roadmap.md  technical-spec.md
public/: README.md
public/assets/sounds/: README.md
public/assets/sprites/cat/: cat.json
scripts/: preflight.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/sounds/: README.md
src/assets/sprites/cat/: README.md
src/core/: animations.ts  behavior.ts  brain.ts  companion.ts  cursorAwareness.ts  interaction.ts  memory.ts  mind.ts  overlayStage.ts  patrolPlanner.ts  patrolSelector.ts  patrolSurface.ts  petting.ts  preferences.ts  renderer.ts  scheduler.ts  screen.ts  sound.ts  spriteAtlas.ts  trajectory.ts  types.ts  typingGuard.ts
src/styles/: global.css
src/ui/: PetApp.tsx  SettingsApp.tsx  defaultAssets.ts  nativeSurfaces.ts  petWindow.ts
test/: assets.test.ts  behavior.test.ts  brain.test.ts  companion.test.ts  cursorAwareness.test.ts  foundation.test.mjs  interaction.test.ts  memory.test.ts  mind.test.ts  nativeSurfaces.test.ts  overlayStage.test.ts  patrolPlanner.test.ts  patrolSelector.test.ts  patrolSurface.test.ts  petting.test.ts  preferences.test.ts  release.test.ts  reliability.test.ts  sound.test.ts  trajectory.test.ts  typingGuard.test.ts
