[package]
name = "pawpal"
version = "0.1.0"
description = "A cozy macOS desktop cat companion."
authors = ["PawPal contributors"]
edition = "2021"

[lib]
name = "pawpal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
